hard-gists/4423605/run.log
=== Docker Run Log for 4423605 ===
Started at: Mi 29. Okt 14:38:56 CET 2025

[2025-10-29 14:38:57] START: Running container for 4423605
[2025-10-29 14:38:57] SUCCESS: Container 1579fb3beab1d98aacac5a43dd31a9525ba520687c85c0d6bf4911e40e091d01 started for 4423605
=== Container logs for 4423605 ===
  File "/snippet.py", line 693
    print "testing cipher"
    ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4423605 ===
[2025-10-29 14:38:59] INFO: Container 1579fb3beab1d98aacac5a43dd31a9525ba520687c85c0d6bf4911e40e091d01 has stopped
